<resources>
    <string name="app_name">advert</string>
    <string name="browse_title"><![CDATA[Videos by Your Company]]></string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="title_activity_surface_player">SurfacePlayerActivity</string>
    <string name="title_activity_suface_player_test">SufacePlayerTestActivity</string>
    <string name="distmessage">信号强度：%1$d 距离：%2$d</string>
    <string name="bt_setting_string">设置</string>
    <string name="bt_cancel_string">取消</string>
    <string name="bt_distance_title_string">检测距离设置</string>
    <string name="bt_ugrentinfo_title_string">紧急通知</string>


    <string name="celsius">\u2103</string>

    <string name="activity_button_myapp">我的应用</string>
    <string name="local_list_loading">正在努力加载中...</string>
    <string name="local_list_empty">列表空空如也</string>
    <string name="activity_button_appmanager">应用管理</string>
    <string name="tips_isrunning">正在运行</string>
    <string name="tips_noinstall">未安装</string>
    <string name="tips_readyinstall">待安装</string>
    <string name="tips_installed">已安装</string>
    <string name="system_tips">提示</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="uninstallapp">是否卸载该应用？</string>
    <string name="cleardata_success">清除数据成功！</string>
    <string name="clear_cache_sucess">清除缓存成功</string>
    <string name="string_notify">提示</string>
    <string name="string_nit_search_info">Search 30 Seconds Later</string>
    <string name="uninstall_tips_ing">卸载还在进行中，请稍候. . .</string>
    <string name="app_menu_stop">强制停止</string>
    <string name="app_menu_run">运 行</string>
    <string name="app_menu_cleardata">清除数据</string>
    <string name="app_menu_clearcache">清除缓存</string>
    <string name="app_menu_uninstall">卸 载</string>
    <string name="network_BigTitle">网络</string>
    <string name="network_littleTitle">网络相关设置</string>
    <string name="network_detect_BigTitle">网络检测</string>
    <string name="network_detect_littleTitle">检测设备网络连接状态</string>
    <string name="network_detect_local_network">正在诊断内网连接</string>
    <string name="network_detect_local_network_success">内网连接正常</string>
    <string name="network_detect_local_network_fail">内网连接异常</string>
    <string name="network_detect_dns_network_success">DNS配置正确</string>
    <string name="network_detect_dns_network_fail">DNS配置错误</string>
    <string name="network_detect_dns_network">正在诊断DNS配置</string>
    <string name="network_detect_outside_network">正在诊断外网连接</string>
    <string name="network_detect_outside_network_success">外网连接正常</string>
    <string name="network_detect_outside_network_fail">外网连接异常</string>
    <string name="network_detect_server_network">正在诊断服务器连接</string>
    <string name="network_detect_server_network_success">服务器连接正常</string>
    <string name="network_detect_server_network_fail">服务器连接异常</string>
    <string name="network_detect_success">检测完成，网络连接正常</string>
    <string name="network_detect_fail">无法连接网络，请检查</string>
    <string name="network_menu_blueTooth">蓝牙</string>
    <string name="network_menu_speed_detect">网速检测</string>
    <string name="network_setting_speed_littleTitle">检测设备网络速度</string>
    <string name="network_setting_speed_tencent">测试时间：</string>
    <string name="network_setting_speed_downloadrateNow">当前下载速度：</string>
    <string name="network_setting_speed_downloadrateAvg">平均下载速度：</string>
    <string name="ethernet_bigTitle">有线网络</string>
    <string name="ethernet_littleTitle">有线网络相关设置</string>
    <string name="network_detial_ip">地址：</string>
    <string name="network_detial_yanma">掩码：</string>
    <string name="network_detial_wangguan">网关：</string>
    <string name="network_detial_dns">DNS：</string>
    <string name="network_detial_submit">提交</string>
    <string name="network_update_ignore">手动修改</string>
    <string name="network_update_succeed">静态IP设置成功!</string>
    <string name="network_update_failure">静态IP设置失败!</string>
    <string name="network_detial_ignore">忽略此网络</string>
    <string name="network_detial_autoMatch">自动匹配</string>
    <string name="network_detial_open">开</string>
    <string name="network_detial_close">关</string>
    <string name="wireless_bigTitle">无线网络</string>
    <string name="wireless_littleTitle">无线网络相关设置</string>
    <string name="enter_wifi_password_pass_text">密码：</string>
    <string name="add_network_manually_text">手动添加网络</string>
    <string name="add_network_encryption">加密方式：</string>
    <string name="add_network_SSID">SSID:</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="detect_network_bigTitle">网络连接</string>
    <string name="detect_network_littleTitle">设置网络连接方式</string>
    <string name="detect_network_detectingTip">正在检测网络</string>
    <string name="detect_network_detectedNetworkTip_wireless">无线</string>
    <string name="detect_network_detectedNetworkTip_ethernet">有线</string>
    <string name="detect_network_wirelessTip_connected">已连接</string>
    <string name="network_4G_bigTitle">4G网络</string>
    <string name="detect_network_detectedNetworkTip_4G">4G</string>
    <string name="mobile_network_littleTitle">4G网络相关信息</string>
    <string name="network_detial_networktype">类型：</string>
    <string name="network_detial_phonetype">制式：</string>
    <string name="network_detial_networkname">名称：</string>
    <string name="network_detial_simstate">状态：</string>
    <string name="detect_network_wirelessTip_disconnected">未连接</string>
    <string name="wirelessTip_connectedFial">网络连接失败，请重试</string>
    <string name="wirelessTip_connectedSuccess">网络连接成功</string>
    <string name="wirelessTip_connecting">网络正在连接，请稍后</string>
    <string name="password_tips">密码输入必需大于8个字符，小于63个字符</string>
    <string name="wirelessList_addNet_text">手动添加</string>
    <string name="network_detect_local_network_text">内网连接</string>
    <string name="network_detect_outside_network_text">外网连接</string>
    <string name="network_detect_dns_network_text">DNS</string>
    <string name="network_detect_server_network_text">服务器</string>
    <string name="system_settings_BigTitle">系统设置</string>
    <string name="select_accout_littleTitle">绑定QQ账户</string>
    <string name="time_setting_select_time">当前选择的时间</string>
    <string name="time_setting_year">年</string>
    <string name="time_setting_month">月</string>
    <string name="time_setting_day">日</string>
    <string name="time_setting_hour">时</string>
    <string name="time_setting_minute">分</string>
    <string name="time_setting_second">秒</string>
    <string name="time_setting_set">完成</string>
    <string name="about_setting_BigTitle">关于</string>
    <string name="about_boxTitle_text">产品名称:&#160;&#160;&#160;&#160;</string>
    <string name="about_boxVierson_text">设备型号:&#160;&#160;&#160;&#160;</string>
    <string name="about_boxMac_text">有线mac地址:&#160;</string>
    <string name="about_wifiMac_text">无线mac地址:&#160;</string>
    <string name="about_boxBuletooth_text">蓝牙地址：</string>
    <string name="about_boxIp_text">IP地址:&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="about_boxNunber_text">广电序列号：</string>
    <string name="about_ProductNunber_text">产品序列号:&#160;&#160;</string>
    <string name="about_app_version_text">应用版本:&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="about_versonInfo_text">固件版本:&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="about_boxNunber_value">743298320</string>
    <string name="about_Restfactory">恢复出厂设置</string>
    <string name="about_Restfactory_pop_content">恢复出厂设置后设备数据将被清空。\n是否恢复出厂设置？</string>
    <string name="system_update_BigTitle">系统升级</string>
    <string name="system_update_littleTitle">设备升级</string>
    <string name="system_update_newVersion">新版本</string>
    <string name="system_update_newVersion_content">版本信息去拯救世界了</string>
    <string name="system_update_btn_updateNow">马上升级</string>
    <string name="system_update_pop_updateNow_text">马上进行系统升级？</string>
    <string name="system_update_pop_sure_text">确定</string>
    <string name="system_update_pop_cancel_text">取消</string>
    <string name="logined_dialog_ok">确定</string>
    <string name="logined_dialog_cancel">取消</string>
    <string name="system_update_updating_text">正在升级:</string>
    <string name="system_update_updating_tip_text">需要花费一定时间请耐心等待</string>
    <string name="system_update_updated_success_text">恭喜您,设备已经升级到最新版本！</string>
    <string name="system_update_updated_success_btn_VersionInfo_text">版权信息</string>
    <string name="time_settings">时间设置</string>
    <string name="str_contactus_title">联系我们</string>
    <string name="safe_setting_BigTitle">安全</string>
    <string name="sys_gsensor_text">重力感应设置</string>
    <string name="sys_distance_text">测距设置</string>
    <string name="display_setting_text">显示设置</string>
    <string name="touying_setting_BigTitle">投影设置</string>
    <string name="common_setting_BigTitle">通用设置</string>
    <string name="sys_network_text">网络设置</string>
    <string name="system_update_oldVersion">版本</string>
    <string name="screen_setting_BigTitle">投影设置</string>
    <string name="screen_settings_littleTitle">调整投影机相关设置</string>
    <string name="screen_size_settings_BigTip">画面大小</string>
    <string name="screen_position_settings_BigTip">画面位置</string>
    <string name="screen_ratio_settings_BigTip">画面聚焦</string>
    <string name="detect_network_next">下一步</string>
    <string name="active_check_sucess_string">设备已激活</string>
    <string name="active_check_failed_string">设备未激活</string>
    <string name="activate_message">请通过手机填写相关信息或联系运营人员激活设备</string>
    <string name="no_network_string_title">无网络连接,请参照下方提示检查重试</string>
    <string name="no_network_string_message1">1、请确认SIM卡已正确插入卡槽</string>
    <string name="no_network_string_message2">2、请确认SIM卡无欠费可正常使用</string>
    <string name="no_network_string_message3">3、请确保在1楼以上楼层安装，确保有网络信号</string>
    <string name="no_network_string_message4">4、请更换不同运营商SIM卡再次尝试</string>
    <string name="no_network_string_retry">%1$ds后重试</string>
    <string name="update_dialog_title">检测到升级</string>
    <string name="update_dialog_content">是否立即升级？</string>
    <string name="update_dialog_update_text">升级</string>
    <string name="update_dialog_noupdate_text">暂不升级</string>
    <string name="update_dialog_beforeupdate">检查到新版本，将为你在后台下载升级包，以完成升级</string>
    <string name="sure_to_logout">确定注销吗？</string>
    <string name="update_dialog_forceupdate">检查到新版本，即将为你重启盒子以完成升级</string>
    <string name="update_dialog_reboot">升级包下载完成，是否立即升级？</string>
</resources>
