<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/no_network_rl"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:gravity="center"
		android:layout_marginTop="30dp"
		android:layout_alignParentTop="true"
		android:visibility="visible">
		<TextView 
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColor="#FFFFFF"
			android:textSize="40sp"
			android:layout_marginTop="20dp"
			android:gravity="center"
			android:textStyle="bold"
			android:text="@string/no_network_string_title"/>
	</LinearLayout>
    <LinearLayout
        android:id="@+id/no_network_string_message" 
	    android:layout_width="match_parent"
	   	android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:gravity="center"
	    android:layout_gravity="left"
	    android:layout_centerInParent="true"
	    android:layout_centerHorizontal="true"
	    android:layout_below="@id/pageTitle">
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="45dp"
			android:textColor="#FFFFFF"
			android:textSize="30sp"
			android:layout_marginTop="20dp"
			android:textStyle="bold"
			android:text="@string/no_network_string_message1"/>
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="45dp"
			android:textColor="#FFFFFF"
			android:textSize="30sp"
			android:layout_marginTop="20dp"
			android:textStyle="bold"
			android:text="@string/no_network_string_message2"/>
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="45dp"
			android:textColor="#FFFFFF"
			android:textSize="30sp"
			android:layout_marginTop="20dp"
			android:textStyle="bold"
			android:text="@string/no_network_string_message3"/>
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="45dp"
			android:textColor="#FFFFFF"
			android:textSize="30sp"
			android:layout_marginTop="20dp"
			android:textStyle="bold"
			android:text="@string/no_network_string_message4"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:gravity="right"
		android:layout_marginRight="40dp"
		android:layout_below="@id/no_network_string_message"
		android:layout_alignParentRight="true"
		android:visibility="visible">
		<TextView
		    android:id="@+id/no_network_text_retry"
			android:layout_width="match_parent"
			android:layout_height="45dp"
			android:textColor="#FFFFFF"
			android:gravity="right"
			android:textSize="30sp"
			android:layout_marginTop="20dp"
			android:textStyle="bold"/>
	</LinearLayout>
</RelativeLayout>