<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="500dp"
    android:layout_height="250dp"
    android:background="@drawable/update_dialog_bg"
    android:gravity="center"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/warningTitle"
         android:layout_width="match_parent"
   		 android:layout_height="50dp"
   		 android:textSize="28sp"
   		 android:textColor="@color/common_color_white"
   		  android:gravity="center"
   		  android:layout_marginTop="30dp"
        />
    
    <TextView 
        android:id="@+id/warningContent"
         android:layout_width="match_parent"
   		 android:layout_height="50dp"
   		 android:textColor="@color/common_color_white"
   		 android:textSize="24sp"
   		 android:text="@string/sure_to_logout"
   		 android:gravity="center"
   		 android:layout_marginTop="10dp"
        />
    <LinearLayout 
        android:layout_width="match_parent"
   		 android:layout_height="match_parent"
   		 android:orientation="horizontal"
   		 android:layout_marginTop="15dp"
   		 android:gravity="center_horizontal|top"
        >
        <Button 
            android:id="@+id/warningOk"
            android:layout_width="150dp"
   		 	android:layout_height="65dp"
   		 	android:textColor="@color/common_color_grey"
   		 	android:textSize="22sp"
   		 	android:text="@string/system_update_pop_sure_text"
   		 	android:background="@null"
            />
         <Button 
             android:id="@+id/warningCancel"
            android:layout_width="150dp"
   		 	android:layout_height="65dp"
   		 	android:textColor="@color/common_color_grey"
   		 	android:textSize="22sp"
   		 	android:text="@string/system_update_pop_cancel_text"
   		 	android:layout_marginLeft="60dp"
   		 	android:background="@null"
            />
    </LinearLayout>

</LinearLayout>
