<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <RelativeLayout 
        android:id="@+id/main_rl"
        android:layout_width="match_parent"
    	android:layout_height="match_parent" 
        >
        <LinearLayout 
            android:id="@+id/topLocalInfor"
            android:layout_width="match_parent"
    		android:layout_height="17dp" 
    		android:orientation="horizontal"
    		android:layout_marginTop="10dp"
    		android:visibility="invisible"
            >
            <include layout="@layout/local_infor"/>
        </LinearLayout>
        <RelativeLayout 
            android:id="@+id/pageTitle"
            android:layout_width="match_parent"
    		android:layout_height="83dp" 
    		android:layout_below="@id/topLocalInfor"
    		android:layout_marginLeft="20dp"
            android:layout_marginTop="0dp"
            >
            <ImageView 
                android:id="@+id/leftIcon"
             	android:layout_width="20dp"
    			android:layout_height="83dp" 
    			android:layout_marginRight="20dp"
    			android:src="@drawable/top_left_icon"
                />
            <TextView 
                android:id="@+id/bigTitle"
                android:layout_width="200dp"
    			android:layout_height="50dp" 
    			android:textSize="@dimen/page_BigTitle_size"
    			android:layout_toRightOf="@id/leftIcon"
    			android:textColor="@color/common_color_white"
    			android:text="@string/system_update_BigTitle"
                />
             <TextView 
                android:id="@+id/littleTitle"
                android:layout_width="250dp"
    			android:layout_height="28dp" 
    			android:textSize="@dimen/page_littleTitle_size"
    			android:layout_below="@+id/bigTitle"
    			android:textColor="@color/page_LittleTitle"
    			android:text="@string/system_update_littleTitle"
    			android:layout_alignLeft="@+id/bigTitle"
                />
        </RelativeLayout>
        <!-- before update -->
        <LinearLayout 
             android:id="@+id/before_update_ll"
             android:layout_width="match_parent"
    		 android:layout_height="match_parent" 
    		 android:gravity="center"
    		 android:layout_centerHorizontal="true"
    		 android:orientation="vertical"
    		 android:layout_marginTop="100dp"
    		 android:visibility="visible"
            >
            <TextView 
                android:id="@+id/before_update_newVersion_text"
                android:layout_width="720dp"
    			android:layout_height="50dp" 
    			android:textSize="38sp"
    			android:text="@string/system_update_newVersion"
    			android:textColor="@color/common_color_white"
    			android:gravity="left"
    			android:textStyle="bold"
                />
            <RelativeLayout 
                android:layout_width="wrap_content"
    		   android:layout_height="match_parent"
    		   android:layout_marginTop="30dp"
                >
            <TextView 
                android:id="@+id/before_update_newVersion_content"
               android:layout_width="720dp"
    		   android:layout_height="375dp"  
    		   android:layout_centerHorizontal="true"
    		   android:text="@string/system_update_newVersion_content"
    		   android:textColor="@color/common_color_grey"
    		   android:lineSpacingExtra="5dp"
    		   android:textSize="20sp"
                />
            <LinearLayout 
                android:id="@+id/updateButton_ll"
                android:layout_width="match_parent"
    		    android:layout_height="150dp"  
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="280dp"
                android:gravity="left|center_vertical"
                android:visibility="gone"
                >
                <Button 
                    android:id="@+id/updateNowBtn"
                    android:layout_width="200dp"
    		   		 android:layout_height="70dp" 
    		   		 android:text="@string/system_update_btn_updateNow"
    		   		 android:textColor="@color/common_color_grey_white"
    		   		 android:focusable="true"
    		   		 android:textSize="22sp"
    		   		 android:background="@null"
                    />
                <Button 
                    android:id="@+id/updateCancel"
                    android:layout_width="200dp"
    		   		 android:layout_height="70dp" 
    		   		 android:text="@string/logined_dialog_cancel"
    		   		 android:textColor="@color/common_color_grey_white"
    		   		 android:focusable="true"
    		   		 android:layout_marginLeft="10dp"
    		   		 android:textSize="22sp"
    		   		 android:background="@null"
                    />
            </LinearLayout>
            
            <LinearLayout 
                android:id="@+id/system_update_updating"
                 android:layout_width="match_parent"
    		     android:layout_height="150dp" 
                android:orientation="vertical"
                android:layout_alignParentBottom="true"
                android:gravity="left"
                android:visibility="gone"
                android:layout_marginLeft="120dp"
                >
                <TextView 
                   android:layout_width="wrap_content"
    		       android:layout_height="wrap_content" 
    		       android:text="@string/system_update_updating_text"
    		       android:textSize="20sp"
    		       android:textColor="@color/common_color_white"
    		       android:layout_marginLeft="150dp"
    		       android:layout_marginTop="30dp"
                    />
                <ProgressBar
                 android:id="@+id/updatingProgressBar"
                 android:layout_width="800dp"
    		 	 android:layout_height="15dp"
    		 	 style="?android:attr/progressBarStyleHorizontal"
    		 	 android:max="100"
    		 	 android:progress="0"
    		 	 android:progressDrawable="@drawable/progress"
    		 	 android:background="@drawable/progress_bg"
    		 	 android:layout_marginLeft="150dp"
    		 	 android:layout_marginTop="30dp"
                 />
            </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
       
        <!-- updating -->
         <LinearLayout 
             android:id="@+id/system_update_updating1"
             android:layout_width="800dp"
    		 android:layout_height="200dp" 
    		 android:gravity="left"
    		 android:layout_centerHorizontal="true"
    		 android:layout_below="@id/pageTitle"
    		 android:orientation="vertical"
    		 android:layout_marginTop="100dp"
    		 android:visibility="gone"
            >
            <TextView 
                android:layout_width="250dp"
    		 	android:layout_height="30dp" 
    		 	android:textColor="@color/common_color_white" 
    		 	android:text="@string/system_update_updating_text"
    		 	android:textSize="22sp"
                />
             <TextView 
                android:layout_width="250dp"
    		 	android:layout_height="22dp" 
    		 	android:textColor="@color/common_color_grey" 
    		 	android:text="@string/system_update_updating_tip_text"
    		 	android:textSize="16sp"
                />
             <ProgressBar
                 android:id="@+id/updatingProgressBar1"
                 android:layout_width="600dp"
    		 	android:layout_height="30dp"
    		 	android:layout_marginTop="20dp"
    		 	style="?android:attr/progressBarStyleHorizontal"
    		 	android:max="100"
    		 	android:minHeight="50dp"
    		 	android:progress="0"
                 ></ProgressBar>
            </LinearLayout>
            <!-- updated success -->
         <LinearLayout 
             android:id="@+id/system_update_updated"
             android:layout_width="800dp"
    		 android:layout_height="200dp" 
    		 android:gravity="center"
    		 android:layout_centerHorizontal="true"
    		 android:layout_below="@id/pageTitle"
    		 android:orientation="vertical"
    		 android:layout_marginTop="100dp"
    		 android:visibility="gone"
            >
             <TextView 
                 android:layout_width="500dp"
    		 	android:layout_height="100dp"
    		 	android:textColor="@color/common_color_white" 
    		 	android:text="@string/system_update_updated_success_text"
    		 	android:textSize="22sp"
    		 	android:gravity="center"
                 />
             
             <Button
                 android:id="@+id/versionInforBtn" 
                 android:layout_width="200dp"
    		 	android:layout_height="60dp"
    		 	android:layout_marginTop="40dp"
    		 	android:textColor="@color/common_color_white" 
    		 	android:text="@string/system_update_updated_success_btn_VersionInfo_text"
                 />
             </LinearLayout>
         
    </RelativeLayout>

</FrameLayout>
