<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <RelativeLayout 
        android:id="@+id/main_rl"
        android:layout_width="match_parent"
    	android:layout_height="match_parent" 
        >
        <RelativeLayout 
            android:id="@+id/pageTitle"
            android:layout_width="match_parent"
    		android:layout_height="83dp"
			android:layout_alignParentTop="true"
    		android:layout_below="@id/topLocalInfor"
    		android:layout_marginTop="50dp"
    		android:layout_marginLeft="120dp"
            >
            <ImageView 
                android:id="@+id/leftIcon"
             	 android:layout_marginTop="40dp"
             	android:layout_width="20dp"
    			android:layout_height="20dp" 
    			android:layout_marginRight="10dp"
    			android:src="@drawable/top_left_icon"
    			android:visibility="invisible"
                />
            <TextView 
                android:id="@+id/bigTitle"
                android:layout_width="200dp"
    			android:layout_height="50dp" 
    			android:textSize="@dimen/page_BigTitle_size"
    			android:layout_toRightOf="@id/leftIcon"
    			android:textColor="@color/common_color_white"
    			android:text="@string/screen_setting_BigTitle"
                />
             <TextView 
                android:id="@+id/littleTitle"
                android:layout_width="200dp"
    			android:layout_height="28dp" 
    			android:textSize="@dimen/page_littleTitle_size"
    			android:layout_below="@+id/bigTitle"
    			android:textColor="@color/page_LittleTitle"
    			android:text="@string/screen_settings_littleTitle"
    			android:layout_alignLeft="@+id/bigTitle"
                />
        </RelativeLayout>
		<LinearLayout
			android:id="@+id/next_ll"
			android:layout_width="200dp"
			android:layout_height="80dp"
			android:background="@drawable/button_bg"
			android:layout_marginBottom="50dp"
			android:layout_alignParentBottom="true"
			android:layout_alignParentRight="true"
			android:focusable="true"
			android:visibility="visible">
			<TextView
				android:id="@+id/next_text"
				android:layout_width="200dp"
				android:layout_height="80dp"
				android:textColor="#4c5c6a"
				android:textSize="30sp"
				android:gravity="center"
				android:text="@string/detect_network_next"
				android:textStyle="bold"/>
		</LinearLayout>
        <LinearLayout
	    	android:id="@+id/screen_settingsTip_ll" 
	        android:layout_width="wrap_content"
	    	android:layout_height="fill_parent"
	    	android:orientation="horizontal"
			android:gravity="center"
			android:layout_centerVertical="true"
	    	android:layout_centerHorizontal="true"
	    	android:layout_below="@id/pageTitle"
			android:layout_above="@id/next_ll">
		    <LinearLayout
		    	android:id="@+id/screen_ratio_settingsTip_ll" 
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:orientation="vertical"
		    	android:gravity="center"
		    	android:background="@drawable/item_bg"
		    	android:focusable="true"
		    	android:focusableInTouchMode="true"
		    	android:visibility="visible">
	            <ImageView 
	             	android:layout_width="120dp"
			        android:layout_height="120dp"
			        android:src="@drawable/icon_screen_ratio"
			        android:layout_marginTop="20dp"/>
		        <TextView 
		            android:id="@+id/screen_ratio_settingsTip_title"
		            android:layout_width="match_parent"
		    		android:layout_height="45dp"
		    		android:textColor="#FFFFFF"
		    		android:textSize="30sp"
		    		android:layout_marginTop="20dp"
		    		android:gravity="center"
		    		android:textStyle="bold"
		    		android:text="@string/screen_ratio_settings_BigTip"/>
		    </LinearLayout>

			<LinearLayout
				android:id="@+id/screen_size_settingsTip_ll"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/item_bg"
				android:focusable="true"
				android:focusableInTouchMode="true"
				android:gravity="center"
				android:layout_marginLeft="20dp"
				android:orientation="vertical">

				<ImageView
					android:layout_width="120dp"
					android:layout_height="120dp"
					android:layout_marginTop="20dp"
					android:src="@drawable/icon_screen_size" />

				<TextView
					android:id="@+id/screen_size_settingsTip_title"
					android:layout_width="match_parent"
					android:layout_height="45dp"
					android:layout_marginTop="20dp"
					android:gravity="center"
					android:text="@string/screen_size_settings_BigTip"
					android:textColor="#FFFFFF"
					android:textSize="30sp"
					android:textStyle="bold" />
			</LinearLayout>
		   	<LinearLayout
		    	android:id="@+id/screen_position_settingsTip_ll" 
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:orientation="vertical"
		    	android:gravity="center"
		    	android:focusable="true"
				android:layout_marginLeft="20dp"
				android:background="@drawable/item_bg"
		    	android:focusableInTouchMode="true"
		    	android:visibility="visible">
	            <ImageView 
	             	android:layout_width="120dp"
			        android:layout_height="120dp"
			        android:src="@drawable/icon_screen_position"
			        android:layout_marginTop="20dp"/>
		        <TextView 
		            android:id="@+id/screen_position_settingsTip_title"
		            android:layout_width="match_parent"
		    		android:layout_height="45dp"
		    		android:textColor="#FFFFFF"
		    		android:textSize="30sp"
		    		android:layout_marginTop="20dp"
		    		android:gravity="center"
		    		android:textStyle="bold"
		    		android:text="@string/screen_position_settings_BigTip"/>
		    </LinearLayout>
	 	</LinearLayout>

    </RelativeLayout>

</FrameLayout>
